jilles      2006/09/30 22:10:34 UTC	(20060930-6585)
  Log:
  Convert help_display() to sourceinfo.
  Make help_cmd_find() static.
  

  Changes:	Modified:
  +1 -3		trunk/include/commandtree.h (File Modified) 
  +1 -1		trunk/modules/chanserv/help.c (File Modified) 
  +1 -1		trunk/modules/global/main.c (File Modified) 
  +1 -1		trunk/modules/memoserv/help.c (File Modified) 
  +1 -1		trunk/modules/nickserv/help.c (File Modified) 
  +1 -1		trunk/modules/operserv/help.c (File Modified) 
  +15 -14	trunk/src/help.c (File Modified) 


jilles      2006/09/30 21:45:01 UTC	(20060930-6583)
  Log:
  src/packet.c: remove obsolete TODO comment.
  

  Changes:	Modified:
  +0 -3		trunk/src/packet.c (File Modified) 


jilles      2006/09/30 21:35:44 UTC	(20060930-6581)
  Log:
  chanserv flags <channel> <target> (display one entry):
  - use command_success_string()
  - this is CMDLOG_GET not CMDLOG_SET
  

  Changes:	Modified:
  +8 -4		trunk/modules/chanserv/flags.c (File Modified) 


jilles      2006/09/30 21:24:30 UTC	(20060930-6579)
  Log:
  chanserv flags: use chanacs_source_has_flag to test a single flag (+A).
  

  Changes:	Modified:
  +1 -1		trunk/modules/chanserv/flags.c (File Modified) 


jilles      2006/09/30 21:17:34 UTC	(20060930-6577)
  Log:
  Use chanacs_source_has_flag() and chanacs_source_flags() in some places.
  

  Changes:	Modified:
  +1 -1		trunk/contrib/cs_count.c (File Modified) 
  +3 -3		trunk/modules/chanserv/akick.c (File Modified) 
  +2 -2		trunk/modules/chanserv/ban.c (File Modified) 
  +1 -1		trunk/modules/chanserv/clear_bans.c (File Modified) 
  +1 -1		trunk/modules/chanserv/clear_users.c (File Modified) 
  +3 -3		trunk/modules/chanserv/flags.c (File Modified) 
  +1 -1		trunk/modules/chanserv/getkey.c (File Modified) 
  +2 -2		trunk/modules/chanserv/halfop.c (File Modified) 
  +1 -1		trunk/modules/chanserv/invite.c (File Modified) 
  +2 -2		trunk/modules/chanserv/kick.c (File Modified) 
  +2 -2		trunk/modules/chanserv/op.c (File Modified) 